src/style/partials/popup.scss
.popup {
  position: fixed;
  top: 50%;
  left: 50%;
  max-width: 670px;
  max-height: 100vh;
  overflow: hidden;
  width: 100%;
  padding: 20px;
  transform: translateX(-50%) translateY(-50%) scale(0);
  opacity: 0;
  visibility: hidden;
  z-index: $z-index-modal;
  transition: transform $transition-time cubic-bezier(1, 0.355, 0.61, 0.215), visibility 0s $transition-time, opacity 0s $transition-time;

  &--is-open {
    opacity: 1;
    visibility: visible;
    transform: translateX(-50%) translateY(-50%) scale(1);
    transition: transform $transition-time cubic-bezier(1, 0.355, 0.61, 0.215);
  }

  &__main {
    position: relative;
    padding: 25px;
    border-radius: $border-radius;
    background-color: $body-bg;
    overflow: hidden;
  }

  &__top {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__other {
    display: flex;
    align-items: center;

    @media (max-width: $mobile) {
      display: none;
    }
  }

  &__current-value {
    margin-right: 5px;
    @include font(36px, $font-family, 42px);
    font-weight: 600;
    color: $text-color;
  }

  &__icon {
    width: 45px;
    height: 45px;
  }

  &__title {
    margin: 0;
    @include font(27px, $font-family, 31px);
    font-weight: 600;
    color: $text-color;

    @media (max-width: $mobile) {
      @include titleH2($text-color);
    }
  }

  &__description {
    @include normalString($text-color);
  }

  &__content {
    margin-top: 20px;
  }

  &__buttons-wr {
    margin-top: 20px;
    position: relative;
    display: flex;
    justify-content: space-between;

    @media (max-width: $mobile) {
      flex-wrap: wrap;
    }
  }

  &__button {
    margin-right: 16px;

    @media (max-width: $mobile) {
      margin-right: 0;
      margin-bottom: 15px;
    }

    &:last-child {
      margin-right: 0;

      @media (max-width: $mobile) {
        margin-bottom: 0;
      }
    }
  }

  &__apply {
    @include button(18px, $text-color-dark, $theme-color);
  }

  &__close {
    @include button(18px, $text-color, $body-bg);
  }

  &__filters {
    flex-wrap: nowrap;
    max-width: 100%;
    padding: 5px 0;
    overflow-x: auto;
  }

  &__range {
    margin-top: 20px;
  }

  &__round-slider {
    margin: 0 auto;
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba($grey, 0.5);
  z-index: $z-index-modal - 1;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s $transition-time, opacity $transition-time*2;


  &--is-show {
    opacity: 1;
    visibility: visible;
    transition: visibility $transition-time, opacity $transition-time*2;
  }
}

.is-fixed-overlay {
  overflow: hidden;
  height: 100%;
}

.is-blur {
  filter: blur(3px);
}

